# secret-manager

./: .gitignore  AGENT.md  CHARTER.md  Cargo.toml  DOCKSIDE-EXAM.md  README.md
benches/: encryption_bench.rs
docs/: SECURITY_AUDIT.md  TESTING_STRATEGY.md  TEST_SUITE.md
memory/: JOURNAL.md
src/: lib.rs
tests/common/: fixtures.rs  helpers.rs  mock.rs
tests/performance/: performance_tests.rs
tests/security/: access_control_security_tests.rs  encryption_security_tests.rs
tests/unit/: access_control_tests.rs  encryption_tests.rs  rotation_tests.rs
